@@ -37,6 +37,22 @@
 _.frame: .word 0
         .previous
         lds     #0x2000
+        ; the linker script maps the data section in ROM (LMA) for its initial
+        ; content and in RAM (VMA) for its runtime value.  We have to do
+        ; what the default crt0 does: copy the ROM part in RAM.
+        ; (otherwise any 'globalvar' appears uninitialized)
+	ldx	#__data_image
+	ldy	#__data_section_start
+	bra	Start_map
+Loop:
+	ldaa	0,x
+	staa	0,y
+	inx
+	iny
+Start_map:
+	cpx	#__data_image_end
+	blo	Loop
+Done:
         clr     _.frame
         clr     _.frame+1
 	.endm
@@ -46,5 +62,5 @@ _.frame: .word 0
 	.macro gdbasm_datavar name value
 	.data
 \name:
-	.long	\value
+	.word	\value
 	.endm
