@@ -1,3 +1,10 @@
+2005-11-11  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* gdb.asm/m68hc11.inc: Setup the data section.
+	* gdb.asm/asm-source.exp (m6811-*-*): Don't use the target board linker
+	script for this test.
+	(m6812-*-*): Likewise.
+
 2005-11-03  Jim Blandy  <jimb@redhat.com>
 
         Checked in by Elena Zannoni  <ezannoni@redhat.com>
